Fix a beers bug on Firefox

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ ul {
 	background: url(../img/bg_1.jpg) center 0 no-repeat fixed;
 	background-size: cover;
 }
-.slides {
+.slides, .conta {
 	background: url(../img/bg_2.jpg) center 0 no-repeat fixed;
 	background-size: cover;
 }
@@ -128,6 +128,7 @@ ul {
 	margin: auto;
 	width: 70%;	
 	position: relative;
+	height: 100%;
 }
 
 /* Intro page */
@@ -243,8 +244,9 @@ ul {
 */
 
 /* Beers presentation page */
-.slide_container {
+.slider_container, .slider_container section{
 	z-index: 1;
+	height: 100%;
 }
 .slides_beers {
 	position: absolute;
@@ -254,22 +256,10 @@ ul {
 	z-index: 8;
 }
 
-.slides_container {
-  width: 570px;
-  height: 600px;
-}
-.slides_container div {
-  width: 570px;
-  height: 600px;
-  display: block;
-}
-
-.slides_beers, .slides_btle, .slides_txt {
-	display: inline-block;
-	vertical-align: top;
-}
-.slides_btle {
-	margin-left: 25%;
+section .slides_btle {
+	position: absolute;
+	top: 0;
+	left: 25%;
 	width: auto;
 	height: 100%;
 }
@@ -278,12 +268,13 @@ ul {
 	width: auto;
 }
 
-.slides_txt {
-	padding-top: 20%;
-	margin-left: 5%;
-	width: 22%;
+section .slides_txt {
+	margin-top: 30%;
+	margin-left: 75%;
+	width: 300px;
+	height: 100%;
 }
-.slides_txt h1, .brewe_txt h1 {
+.slides_txt h1 {
 	font-weight: 200;
 	font-size: 4em;
 	line-height: 0.8em;
@@ -298,7 +289,7 @@ ul {
 	height: 3em;
 	background: url('../img/corner.png') 0 1.5em no-repeat;
 }
-.slides_txt article, .brewe_txt p {
+.slides_txt article{
 	line-height: 1.4em;
 	font-weight: 200;
 }
@@ -308,49 +299,27 @@ ul {
 	color: #cc202f;
 	line-height: 1.4em;
 }
-.slides_dots li a {
-	display: block;
-	background: url(../img/btle_dots.png) -37px -37px no-repeat;
-	height: 37px;
-	width: 37px;
-	float: left;
-	margin: 5px 10px 20px 0;
-	background-color: transparent;
-}
-.slides_dots li a:hover {
-	background-position: -37px 0;
-}
-.slides_dots li:first-child a {
-	background-position: 0 -37px;
-}
-.slides_dots li:first-child a:hover {
-	background-position: 0 0;
-}
-.slides_dots li:last-child a {
-	background-position: -74px -37px;
-	margin-right: 30%;
-}
-.slides_dots li:last-child a:hover {
-	background-position: -74px 0;
-}
-.articles article {
-	display: none;
-}
-.articles article:first-child {
-	display: block;
-}
 
 /* Brewery presentation (page 3) */
+.brewe_txt h1, .conta_txt h1 {
+	font-weight: 200;
+	font-size: 4em;
+	line-height: 0.8em;
+}
+.brewe_txt p {
+	line-height: 1.4em;
+	font-weight: 200;
+}
 .brewe_size {
 	max-width: 30%;
 }
-.brewe_txt {
+.brewe_txt, .conta_txt {
 	z-index: 0;
 	padding-top: 15%;
 	margin-left: 10%;
 	width: 32%;
 }
-.brewe_txt h1 {
+.brewe_txt h1, .conta_txt h1 {
 	margin-bottom: 5%;
 }
 .brewe_sticker {
